--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "dev": "node utils/seed"
+    "seed": "node utils/seed",
+    "dev": "nodemon index"
   },
   "dependencies": {
     "express": "^4.19.2",
